Updated project structure to align with current TweetWallFX