@@ -1,7 +1,7 @@
 /*
  * The MIT License
  *
- * Copyright 2014-2018 TweetWallFX
+ * Copyright 2018 TweetWallFX
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
@@ -22,33 +22,218 @@
  * THE SOFTWARE.
  */
 
-apply plugin: 'application'
-mainClassName = 'org.tweetwallfx.generic.Main'
+buildscript {
+    repositories {
+        maven {
+            url 'https://plugins.gradle.org/m2/'
+        }
+        jcenter()
+    }
 
-tasks.withType(JavaExec) {
-    main mainClassName
-    jvmArgs '-Dorg.tweetwallfx.scheduledata.day=thursday'
-    jvmArgs '-Dorg.tweetwallfx.scheduledata.time=10:00Z'
-    jvmArgs '-Dorg.tweetwallfx.vdz.min.followers=10'
-    jvmArgs '-Djavafx.verbose=true'
-    jvmArgs '-Dprism.verbose=true'
+    dependencies {
+        classpath group: 'com.diffplug.spotless', name: 'spotless-plugin-gradle', version: versionSpotless
+        classpath group: 'com.github.ben-manes', name: 'gradle-versions-plugin', version: versionGradleVersionsPlugin
+        classpath group: 'com.netflix.nebula', name: 'gradle-info-plugin', version: versionGradleInfoPlugin
+        classpath group: 'gradle.plugin.com.github.spotbugs', name: 'spotbugs-gradle-plugin', version: versionSpotbugs
+        classpath group: 'net.ltgt.gradle', name: 'gradle-errorprone-plugin', version: versionGradleErrorpronePlugin
+        // VCS dependency required by plugin 'gradle-info-plugin'
+        classpath group: 'org.eclipse.jgit', name: 'org.eclipse.jgit', version: versionJGit
+        classpath group: 'org.sonarsource.scanner.gradle', name: 'sonarqube-gradle-plugin', version: versionSonarqubeGradlePlugin
+        classpath group: 'com.google.gradle', name: 'osdetector-gradle-plugin', version: versionOsdetectorGradlePlugin
+    }
 }
 
-task('debug', dependsOn: 'classes', type: JavaExec) {
-    classpath sourceSets.main.runtimeClasspath
-    debug = true
+apply plugin: 'build-dashboard'
+apply plugin: 'org.sonarqube'
+apply plugin: 'com.google.osdetector'
+
+// applying Versions plugin
+apply plugin: 'com.github.ben-manes.versions'
+
+ext {
+    releaseDate = new Date()
+    bintrayEnabled = \
+        ('false' != System.getenv('TRAVIS_PULL_REQUEST')) &&
+        null != findProperty('BINTRAY_USER') &&
+        null != findProperty('BINTRAY_KEY')
+    preJDK11 = System.getProperty('java.version').startsWith('1.8.')
+    javaFxPlatform = osdetector.os == 'osx' ? 'mac' : osdetector.os == 'windows' ? 'win' : osdetector.os
 }
 
-dependencies {
-    compile project(':TweetWallFX-Devoxx-API-CFP')
-    compile project(':TweetWallFX-Devoxx-CFP-StepEngine')
-    compile project(':TweetWallFX-Generic2D')
-    compile project(':TweetWallFX-Tweet-Impl-Twitter4J')
-    compile project(':TweetWallFX-Tweet-StepEngine')
-    compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: versionLog4j
 
-    runtime project(':TweetWallFX-Devoxx-CFP-Impl')
-    runtime group: 'org.apache.logging.log4j', name: 'log4j-core', version: versionLog4j
+allprojects {
+    group = 'org.tweetwallfx'
+    version = currentVersion
+    description = 'JavaFX based Tweetwall'
 
-    testCompile project(':TweetWallFX-Devoxx-CFP-Test')
+    repositories {
+        jcenter()
+        mavenCentral()
+    }
+
+    // configuring Spotless
+    apply plugin: "com.diffplug.gradle.spotless"
+
+    spotless {
+        format 'textBasedFiles', {
+            target fileTree(project.rootDir) {
+                include '**/*.gradle'
+                include '**/*.asciidoc'
+                include '**/*.adoc'
+                include '**/*.asc'
+                include '**/*.json'
+                include '**/*.md'
+                include '**/*.properties'
+                include '**/.gitignore'
+                exclude '**/.gradle/**'
+                exclude '**/build/**'
+            }
+
+            trimTrailingWhitespace()
+            indentWithSpaces(4)
+            endWithNewline()
+        }
+    }
+
+    afterEvaluate {
+        check.dependsOn(spotlessCheck)
+    }
+
+    // now configuring for projects that coontain code not just structuring the project
+    if (childProjects.isEmpty()) {
+        // configuring standard java project
+        apply plugin: 'java'
+        apply plugin: 'idea'
+        apply plugin: 'jacoco'
+        apply plugin: 'eclipse'
+        apply plugin: 'nebula.info'
+        apply plugin: 'maven-publish'
+
+        configurations {
+            javafx
+            jaxb
+        }
+
+        dependencies {
+            javafx group: 'org.openjfx', name: 'javafx-base', version: versionJavaFx, classifier: javaFxPlatform
+            javafx group: 'org.openjfx', name: 'javafx-graphics', version: versionJavaFx, classifier: javaFxPlatform
+            javafx group: 'org.openjfx', name: 'javafx-fxml', version: versionJavaFx, classifier: javaFxPlatform
+            javafx group: 'org.openjfx', name: 'javafx-controls', version: versionJavaFx, classifier: javaFxPlatform
+            jaxb group: 'com.sun.activation', name: 'javax.activation', version: versionJavaActivation
+            jaxb group: 'javax.xml.bind', name: 'jaxb-api', version: versionJaxB
+            jaxb group: 'com.sun.xml.bind', name: 'jaxb-impl', version: versionJaxB
+            testCompile group: 'junit', name: 'junit', version: versionJUnit
+            testCompile group: 'org.assertj', name: 'assertj-core', version: versionAssertJ
+        }
+
+        jar {
+            manifest.attributes provider: 'gradle'
+        }
+
+        javadoc {
+            doFirst {
+                if (preJDK11) return
+                def additionalModules = (configurations.javafx + configurations.jaxb)
+                options.addStringOption('-module-path', additionalModules.asPath)
+                options.addStringOption('-add-modules', 'java.activation,java.xml.bind,javafx.controls,javafx.graphics,javafx.fxml')
+            }
+        }
+
+        compileJava {
+            doFirst {
+                if (preJDK11) return
+                def additionalModules = (configurations.javafx + configurations.jaxb)
+                options.compilerArgs = [
+                        '--module-path', (configurations.javafx + configurations.jaxb).asPath,
+                        '--add-modules', 'javafx.controls,javafx.fxml',
+                        '-Xlint:all', '-Werror', '-proc:none'
+                ]
+            }
+        }
+
+        tasks.withType(JavaExec) {
+            if (preJDK11) return
+            def additionalModules = (configurations.javafx + configurations.jaxb)
+            jvmArgs '--module-path'
+            jvmArgs additionalModules.asPath
+            jvmArgs '--add-modules'
+            jvmArgs 'java.activation,java.xml.bind,javafx.controls,javafx.graphics,javafx.fxml'
+        }
+
+        check {
+            dependsOn 'javadoc'
+        }
+
+        // configuring Errorprone
+//        apply plugin: "net.ltgt.errorprone"
+
+//        dependencies {
+//            errorproneJavac group: 'com.google.errorprone', name: 'error_prone_core', version: versionErrorProneCore
+//        }
+
+        // configuring Spotbugs
+        apply plugin: 'com.github.spotbugs'
+
+        spotbugs {
+            ignoreFailures = false
+        }
+
+        tasks.withType(com.github.spotbugs.SpotBugsTask) {
+            // Workaround to bug https://github.com/spotbugs/spotbugs/issues/440
+            def sourceSetName = (name - 'spotbugs').uncapitalize()
+            dependsOn( sourceSets[sourceSetName].classesTaskName)
+
+            reports {
+                xml.enabled = false
+                html.enabled = true
+            }
+        }
+
+        // configuring Versions plugin
+        dependencyUpdates {
+            revision = 'release'
+            resolutionStrategy {
+                componentSelection { rules ->
+                    rules.all { /*ComponentSelection*/ selection ->
+                        if (['alpha', 'beta', 'rc', 'cr', 'm'].any{ qualifier ->
+                            selection.candidate.version ==~ /(?i).*[.-]${qualifier}[.\d-]*.*/
+                        }) {
+                            selection.reject('Release candidate')
+                        }
+                    }
+                }
+            }
+        }
+    }
+
+    plugins.withType(org.gradle.api.plugins.GroovyPlugin) {
+        dependencies {
+            compile group: 'org.codehaus.groovy', name: 'groovy-all', version: versionGroovy
+            testCompile group: 'org.spockframework', name: 'spock-core', version: versionSpockFramework
+        }
+    }
+
+    tasks.withType(org.gradle.api.tasks.testing.Test) {
+        systemProperty 'org.tweetwallfx.tests.executeCFPClientLiveTests', executeCFPClientLiveTests
+    }
 }
+
+task createFolders(description: 'Creates the folders for the projects and sourceSets should they not exist.') doLast {
+    rootProject.allprojects.each {p ->
+        if (!p.getProjectDir().isDirectory()) {
+            println 'Creating project folder: ' + p.getProjectDir()
+            p.getProjectDir().mkdirs()
+        }
+
+        if (p.hasProperty('sourceSets')) {
+            p.sourceSets*.allSource*.srcDirs*.each { File srcDir ->
+                if (!srcDir.isDirectory()) {
+                    println 'Creating source folder: ' + srcDir
+                    srcDir.mkdirs()
+                }
+            }
+        }
+    }
+}
+
+task runCinema2K dependsOn ':tweetwallfx-voxxed-days-zurich-cinema2k:run'
